--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,9 +1,11 @@
 body {
+  margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #181a1b;
+  color: #e8e6e3;
 }
 
 h2 {
@@ -15,6 +17,7 @@ form {
   gap: 1em;
   display: flex;
   flex-direction: column;
+  margin: 3em;
 }
 
 form p {
@@ -26,11 +29,89 @@ form p {
   flex-direction: column;
 }
 
-button {
-  padding: .5em 1em;
-}
-
 p {
   text-align: center;
   margin: .3em;
+}
+
+#header {
+  display: inherit;
+  align-items: center;
+  justify-content: space-around;
+  width: 100vw;
+  height: 10vh;
+  background-color: #3d2683;
+}
+
+#header h1 {
+  width: 20vw;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #e8e6e3;
+}
+
+#header input {
+  width: 35vw;
+  border: .3em solid rgb(140, 130, 115);
+  background-color: #2b2a33;
+  color: #e8e6e3;
+  border-radius: 25px;
+  padding: 1em;
+}
+
+#header span {
+  width: 20vw;
+}
+
+#header #account {
+  width: 25vw;
+  align-items: center;
+  justify-content: center;
+  display: inherit;
+  gap: 1em;
+}
+
+#header #account img {
+  height: 7vh;
+  aspect-ratio: 1;
+  border-radius: 15px;
+  object-fit: cover;
+}
+
+#header #account button {
+  padding: .5em 1em;
+  color: #e8e6e3;
+  background-color: #2b2a33;
+  border-color: rgb(140, 130, 115);
+}
+
+#header #account .dropdown-menu {
+  display: none;
+  position: relative;
+  top: 4em;
+  left: -5em;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+}
+
+#header #account .dropdown-menu li {
+  width: max-content;
+}
+
+#header #account input[type="checkbox"] {
+  display: none;
+}
+
+#header #account input[type="checkbox"]:checked+.dropdown-menu {
+  display: block;
+  width: max-content;
+}
+
+
+
+img {
+  height: 30vh;
+  aspect-ratio: 1;
 }
