--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,11 +1,12 @@
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: #181a1b;
-  color: #e8e6e3;
+  background-color: #2C3E50;
+  color: #fff;
 }
 
 h2 {
@@ -39,8 +40,9 @@ p {
   align-items: center;
   justify-content: space-around;
   width: 100vw;
-  height: 10vh;
-  background-color: #3d2683;
+  height: 15vh;
+  background-color: #1E272E;
+  color: #fff;
 }
 
 #header h1 {
@@ -80,8 +82,8 @@ p {
 
 #header #account button {
   padding: .5em 1em;
-  color: #e8e6e3;
-  background-color: #2b2a33;
+  background-color: #34495E;
+  color: #fff;
   border-color: rgb(140, 130, 115);
 }
 
