--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100vw;
-  height: 15vh;
+  min-height: 15vh;
   background-color: #1E272E;
   color: #fff;
   margin-bottom: 3rem;
@@ -32,12 +32,12 @@
 #header #account {
   width: 25vw;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   display: inherit;
   gap: 1em;
 }
 
-#header #account img {
+#header #account .profilePic {
   height: 7vh;
   aspect-ratio: 1;
   border-radius: 15px;
@@ -51,26 +51,73 @@
   border-color: rgb(140, 130, 115);
 }
 
-#header #account .dropdown-menu {
-  display: none;
-  position: relative;
-  top: 4em;
-  left: -5em;
-  padding: 0;
-  margin: 0;
-  background-color: white;
-  border: 1px solid #ccc;
-}
 
-#header #account .dropdown-menu li {
-  width: max-content;
-}
 
 #header #account input[type="checkbox"] {
   display: none;
 }
 
-#header #account input[type="checkbox"]:checked+.dropdown-menu {
+/* Hide the dropdown menu by default */
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 15vh;
+  margin: 0;
+  right: 0;
+  width: 15vw;
+  border: 5px solid #1E272E;
+  border-top: none;
+  padding: 0;
+}
+
+/* Show the dropdown menu when the checkbox is checked */
+.dropdown:checked~ul {
   display: block;
-  width: max-content;
+}
+
+
+/* Style the dropdown menu items */
+.dropdown-content {
+  background-color: #f1f1f1;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  list-style: none;
+}
+
+.dropdown-content a {
+  display: block;
+  color: #333;
+  text-decoration: none;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+#account .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1.5rem;
+  gap: 1rem;
+}
+
+#account .buttons .icons {
+  height: 5vh;
+}
+
+#bars {
+  display: block;
+}
+
+#cross {
+  display: none;
+}
+
+.dropdown:checked+label #bars {
+  display: none;
+}
+
+.dropdown:checked+label #cross {
+  display: block;
 }
