--- a/assets/styles/cart.css
+++ b/assets/styles/cart.css
@@ -2,6 +2,8 @@
     display: flex;
     gap: 2rem;
     width: 90%;
+    flex-direction: row;
+    align-items: flex-start;
   }
 
   .cartContent {
@@ -99,4 +101,5 @@
     border-radius: 10px;
     border: solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    height: 30vh;
   }
