--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -79,6 +79,17 @@ a {
   margin-top: 2rem;
 }
 
-.error h3 {
+.success {
+  font-size: 1.2rem;
+  color: greenyellow;
+  font-weight: bold;
+  background: #2f2d2d;
+  padding: 3rem;
+  border-radius: 2rem;
+  margin-top: 2rem;
+}
+
+.error h3,
+.success h3 {
   font-size: 1.4rem;
 }
