--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,5 +1,5 @@
 #header {
-  display: inherit;
+  display: flex;
   align-items: center;
   justify-content: space-around;
   width: 100vw;
@@ -121,4 +121,16 @@
 
 .dropdown:checked+label #cross {
   display: block;
+}
+
+.icons {
+  height: 1.5em;
+}
+
+.white {
+  filter: invert(97%) sepia(97%) saturate(0%) hue-rotate(308deg) brightness(104%) contrast(104%);
+}
+
+.orange {
+  filter: invert(83%) sepia(40%) saturate(7030%) hue-rotate(1deg) brightness(106%) contrast(106%)
 }
