--- a/assets/styles/upload.css
+++ b/assets/styles/upload.css
@@ -1,25 +1,45 @@
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
+main {
+  width: 80%;
 }
 
+.updateForm {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 100%;
+}
+
+#file-label:hover {
+  background: #FFA500;
+}
 
 #file-label {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #428bca;
+  border: 1px solid #FFA500;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
   border-radius: 4px;
   cursor: pointer;
+  transition: .3s ease-in;
 }
 
 input[type="submit"] {
-  padding: 1rem;
+  padding: 0.5rem 3rem;
+  margin: .3rem;
+  border-radius: 50px;
+  border: none;
+  font-size: 1.4rem;
+  font-weight: bold;
+  background-color: #FFA500;
+  color: #FFF;
+  transition: 0.3s ease-in-out;
+}
+
+input[type="submit"]:hover {
+  background-color: #FF6347;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
 }
 
 input[type="file"] {
@@ -35,9 +55,17 @@ input[type="file"] {
   aspect-ratio: 1;
   border-radius: 50%;
   object-fit: cover;
-  border: 10px solid black;
+  border: 5px solid black;
   margin: 1rem;
-  height: 35vh;
+  height: 20vh;
+}
+
+aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: fit-content;
 }
 
 #loading {
@@ -50,4 +78,25 @@ input[type="file"]:focus+#loading {
 
 input[type="file"]+#loading {
   display: none;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 1.1rem;
+}
+
+
+.input-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3rem;
+  width: 70%;
+}
+
+.input-wrapper input {
+  font-size: 1.5rem;
 }
