--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100vw;
-  min-height: 15vh;
+  height: 15vh;
   background-color: #1E272E;
   color: #fff;
   margin-bottom: 3rem;
