--- a/assets/styles/Genre.css
+++ b/assets/styles/Genre.css
@@ -1,36 +1,61 @@
-#Category {
-    width: 20%;
-    height: 100%;
-    margin-right: 0 auto;
-    display: inline-block;
-    text-align: center;
-}
-
-#films {
-    width: 80vw;
-    height: 100vh;
-    margin-left: 0 auto;
+/* Définition des styles pour le conteneur principal */
+ #test {
     display: flex;
-    flex-direction: row;
-    position: absolute;
-    top: 20vh;
-    left: 20vw;
-}
-
-body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-}
-
-main  {
-    width: 20%;
-    height: 100%;
-    margin: 0;
-    display: inline-block;
-}
-
-img {
-    width: 300px;
-    height: 300px;
-}
+  }
+  
+  /* Définition des styles pour la barre des catégories */
+  #Category {
+    flex: 1;
+    padding: 20px;
+    background-color: #f2f2f2;
+  }
+  
+  #Panel_category {
+    width: 100%;
+  }
+  
+  #Panel_category td {
+    padding: 5px;
+  }
+  
+  #Panel_category a {
+    display: block;
+    padding: 5px;
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+  }
+  
+  #Panel_category a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Définition des styles pour la zone des films */
+  #films {
+    flex: 2;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+  }
+  
+  .film {
+    width: 200px;
+    margin: 20px;
+  }
+  
+  .film img {
+    width: 100%;
+  }
+  
+  .film h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
+  
+  .film p {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #333;
+  }
