--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100vw;
-  height: 15vh;
+  min-height: 5rem;
   background-color: #1E272E;
   color: #fff;
   margin-bottom: 3rem;
@@ -133,4 +133,100 @@
 
 .orange {
   filter: invert(83%) sepia(40%) saturate(7030%) hue-rotate(1deg) brightness(106%) contrast(106%)
+}
+
+
+
+@media screen and (max-width: 768px) {
+  #header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    min-height: 20vh;
+    flex-direction: column;
+    gap: 1rem;
+    position: relative;
+  }
+
+  #header h1 {
+    width: auto;
+  }
+
+  #header #account {
+    width: 50vw;
+    align-items: center;
+    display: inherit;
+    gap: 1em;
+    align-self: end;
+    position: absolute;
+    height: 4rem;
+    top: 0;
+  }
+
+  #header #account p {
+    visibility: collapse;
+  }
+
+  #header #account .profilePic {
+    height: 5vh;
+  }
+
+  #account .buttons .icons {
+    height: 3vh;
+  }
+
+  #header #account {
+    width: 50vw;
+    align-items: center;
+    display: inherit;
+    gap: 0.5rem;
+    align-self: end;
+    position: absolute;
+    height: 4rem;
+  }
+
+  #header>a {
+    text-decoration: none;
+    display: flex;
+    text-align: center;
+    color: inherit;
+    width: 50%;
+    align-self: baseline;
+    height: 4rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #header .genre {
+    /* TODO change when button is done */
+    visibility: collapse;
+  }
+
+  .search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    gap: 1rem;
+  }
+
+  #header input {
+    width: 70%;
+  }
+
+  .dropdown {
+    top: 20vh;
+    width: 100vw;
+    color: black;
+  }
+
+  a.dropdown-link {
+    height: 2rem;
+    display: flex;
+    align-items: center;
+  }
+
+  #account .loginButton {
+    margin-right: 1rem;
+  }
 }
