--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,10 +4,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   background-color: #2C3E50;
   color: #fff;
   user-select: none;
+  overflow-x: hidden;
 }
 
 main {
@@ -15,6 +15,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
 }
 
 form p {
