--- a/assets/styles/Genre.css
+++ b/assets/styles/Genre.css
@@ -1,61 +1,94 @@
-/* Définition des styles pour le conteneur principal */
- #test {
-    display: flex;
+body {
+  margin: 0;
+  background-color: #2c3e50;
+}
+
+#test {
+  display: flex;
+  width: 90%;
+
+}
+
+#Category {
+  flex: 1;
+  padding: 20px;
+  background-color: #f2f2f2;
+  color: black;
+  position: sticky;
+  top: 1rem;
+  height: fit-content;
+}
+
+#Panel_category {
+  width: 100%;
+}
+
+#Panel_category td {
+  padding: 5px;
+}
+
+#Panel_category a {
+  display: block;
+  padding: 5px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  flex-direction: column;
+}
+
+#Panel_category a:hover {
+  background-color: #ddd;
+}
+
+#films {
+  flex: 2;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.film {
+  width: 200px;
+  margin: 20px;
+  color: white;
+  background-color: #3A5269;
+  text-align: center;
+}
+
+.film img {
+  width: 100%;
+}
+
+.film h3 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.film p {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: inherit;
+}
+
+@media screen and (max-width: 768px) {
+  #test {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  /* Définition des styles pour la barre des catégories */
+
   #Category {
-    flex: 1;
-    padding: 20px;
-    background-color: #f2f2f2;
+    width: 95%;
   }
-  
-  #Panel_category {
-    width: 100%;
-  }
-  
-  #Panel_category td {
-    padding: 5px;
-  }
-  
-  #Panel_category a {
-    display: block;
-    padding: 5px;
-    font-weight: bold;
-    color: #333;
-    text-decoration: none;
-  }
-  
-  #Panel_category a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Définition des styles pour la zone des films */
+
   #films {
     flex: 2;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px;
+    justify-content: center;
   }
-  
-  .film {
-    width: 200px;
-    margin: 20px;
-  }
-  
-  .film img {
-    width: 100%;
-  }
-  
-  .film h3 {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    font-size: 18px;
-  }
-  
-  .film p {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #333;
-  }
+}
