--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -60,7 +60,7 @@
 .dropdown {
   display: none;
   position: absolute;
-  top: 15vh;
+  top: 8rem;
   margin: 0;
   right: 0;
   width: 15vw;
@@ -220,7 +220,7 @@
   }
 
   .dropdown {
-    top: 20vh;
+    top: 15rem;
     width: 100vw;
     color: black;
   }
@@ -236,7 +236,6 @@
   }
 }
 
-/* Style de base pour les boutons */
 .button {
   display: inline-block;
   padding: 12px 24px;
@@ -250,19 +249,16 @@
   transition: all 0.2s ease-in-out;
 }
 
-/* Style pour le bouton principal */
 .primary-button {
   background-color: #f5f5f5;
   color: #000;
 }
 
-/* Style pour le bouton secondaire */
 .secondary-button {
   background-color: #f5f5f5;
   color: #000;
 }
 
-/* Style pour le bouton avec une icône */
 .icon-button {
   background-color: #f5f5f5;
   color: #fff;
@@ -275,7 +271,6 @@
   align-items: center;
 }
 
-/* Style pour le bouton au survol */
 .button:hover {
   transform: translateY(-3px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
