--- a/assets/styles/cart.css
+++ b/assets/styles/cart.css
@@ -146,7 +146,6 @@ td:nth-child(1) {
   background-color: #bdc3c7;
   height: 50%;
   box-shadow: none;
-  /* height: 275px; */
   width: 100px;
 }
 
@@ -155,4 +154,30 @@ td:nth-child(1) {
   border: none;
   box-shadow: none;
   height: auto;
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    flex-direction: column;
+  }
+
+  .cartContent {
+    width: 100%;
+  }
+
+  .filmCard,
+  #summary {
+    width: inherit;
+  }
+
+  #summary {
+    border: none;
+    position: initial;
+    margin-top: 0;
+    margin-bottom: 5rem;
+  }
+
+  .amount {
+    flex-direction: column;
+  }
 }
