--- a/assets/styles/movieCard.css
+++ b/assets/styles/movieCard.css
@@ -24,6 +24,9 @@
   justify-content: start;
   align-items: start;
   width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .trailer .movie-card {
@@ -84,20 +87,22 @@ section[id^="Page"] .poster {
 }
 
 .movie-carrousel-group {
+  width: 90%;
+  height: 0;
+  padding-top: 40%;
   display: flex;
   gap: 1rem;
   justify-content: center;
-  background-color: #7f8c8d;
-  padding: 1rem;
+  align-items: center;
   flex-wrap: wrap;
   overflow: hidden;
+  background-color: #7f8c8d;
   background-image: var(--bg-image);
-  background-size: cover;
+  background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
   backdrop-filter: blur(3px);
-  width: 90%;
-  height: 500px;
+  position: relative;
 }
 
 .movie-card-group {
@@ -303,11 +308,38 @@ div.movie-infos {
 
   .carrousel-card {
     font-size: 0.6rem;
-    height: 43px;
+    height: 50px;
     width: 100%;
+  }
+
+  .carrousel-link {
+    position: inherit;
+    top: 0;
+    left: 0;
+  }
+
+  .movie-title {
+    height: fit-content;
+  }
+
+  .carrousel-card {
+    height: fit-content;
+  }
+
+  div.movie-infos {
+    height: fit-content;
+  }
+
+  .big {
+    height: 2rem;
   }
 
   .page-swap {
     width: 85%;
+  }
+
+  .movie-carrousel-group {
+    background-size: cover;
+    height: 60px;
   }
 }
