--- a/assets/styles/movieCard.css
+++ b/assets/styles/movieCard.css
@@ -24,6 +24,7 @@
   justify-content: start;
   align-items: start;
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 10px;
   left: 10px;
